fixes logo alignment on ie 9

--- a/wp-content/themes/hodgesmace/style.css
+++ b/wp-content/themes/hodgesmace/style.css
@@ -1714,6 +1714,14 @@ body .site-content .gform_wrapper label.gfield_label+div.ginput_container {
   }
 }
 
+/* logos inline in ie9 */
+
+.home-logos .vc_item {
+  float:left;
+  clear: none;
+  display:block;
+}
+
 
 /* News V2
 * --------------------------------------------------------------- *
